Try to fix maven run test