@@ -15,8 +15,6 @@
   </modules>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
     <suiteThreadPoolSize>1</suiteThreadPoolSize>
     <allure.version>2.13.5</allure.version>
@@ -38,10 +36,11 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.6.1</version>
+          <version>3.8.0</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <!--<source>11</source>
+            <target>11</target>-->
+            <release>11</release>
           </configuration>
         </plugin>
 
@@ -63,6 +62,8 @@
 
           <configuration>
             <argLine>-Xmx2048m</argLine>
+           <!-- <argLine>&#45;&#45;illegal-access=permit</argLine>-->
+            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
             <testFailureIgnore>false</testFailureIgnore>
             <forkCount>3</forkCount>
             <reuseForks>true</reuseForks>
@@ -95,6 +96,16 @@
           </configuration>
         </plugin>
 
+        <!--<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.22.0</version>
+          <configuration>
+            &lt;!&ndash;<argLine>&#45;&#45;illegal-access=permit</argLine>&ndash;&gt;
+            <argLine>&#45;&#45;add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+          </configuration>
+        </plugin>-->
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
@@ -108,9 +119,9 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>3.6</version>
+          <version>3.7.1</version>
           <configuration>
-            <outputEncoding>UTF-8</outputEncoding>
+            <!--<outputEncoding>UTF-8</outputEncoding>-->
             <outputDirectory>${user.dir}/allure-report</outputDirectory>
           </configuration>
         </plugin>
@@ -240,5 +251,30 @@
       <artifactId>java-dotenv</artifactId>
       <version>5.2.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.23.1-GA</version>
+    </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <version>3.2.7</version>
+    </dependency>
+    <!--<dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.4.0-b180725.0427</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.4.0-b180725.0644</version>
+    </dependency>-->
   </dependencies>
 </project>
